<resources>
    <string name="app_name">TikTakToe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button_text">Войти</string>
    <string name="reg_button_text">Зарегистрироваться</string>
    <string name="username_hint">Введите имя пользователя</string>
    <string name="password_hint">Введите пароль</string>
    <string name="repeat_password_hint">Введите пароль повторно</string>
    <string name="phone_hint">Введите номер телефона</string>
</resources>